--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~10.1.2",
     "@angular/router": "~10.1.2",
     "@angular/service-worker": "~10.1.2",
+    "angular-chart.js": "^1.1.1",
     "chart.js": "^2.9.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
